Tree implemation done only traversing remains

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 ~$finalprod.xlsx
-.Male-result.xlsx
-.Male-result1.xlsx
-.Male-result2.xlsx
+Male-result.xlsx
+Male-result1.xlsx
+Male-result2.xlsx
+~$Male-MI-0_Cluster.xlsx
